--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hono-pino": "^0.10.1",
     "pino": "^9.7.0",
     "pino-pretty": "^13.1.1",
+    "postgres": "^3.4.8",
     "stoker": "2.0.1",
     "zod": "^4.0.14"
   },
